@@ -72,6 +72,35 @@
       <textcolor>$VAR[TextColor2]</textcolor>
       <shadowcolor>black</shadowcolor>
     </control>
+    <!--OUTSIDETEMP-->
+    <control type="group">
+      <visible>!IsEmpty(Window(10000).Property(IBUS_OBC_TEMP))</visible>
+      <animation effect="slide" start="0,0" end="-90,0" delay="0" time="300" condition="Player.Muted">conditional</animation>
+      <animation effect="slide" start="490,0" end="0,0" delay="0" time="200">VisibleChange</animation>
+      <animation effect="slide" start="0,0" end="460,0" delay="0" time="400">WindowClose</animation>
+      <animation effect="slide" start="460,0" end="0,0" delay="0" time="400">WindowOpen</animation>
+      <control type="image">
+        <description>temp background</description>
+        <posx>365r</posx>
+        <posy>0</posy>
+        <width>560</width>
+        <height>60</height>
+        <texture flipx="true" border="32,0,0,0">bmw/header.png</texture>
+      </control>
+      <control type="label">
+        <description>temp label</description>
+        <posx>350r</posx>
+        <posy>0</posy>
+        <width>190</width>
+        <height>55</height>
+        <align>center</align>
+        <aligny>center</aligny>
+        <font>font38_title</font>
+        <textcolor>$VAR[TextColor1]</textcolor>
+        <shadowcolor>black</shadowcolor>
+        <label>$INFO[Window(10000).Property(IBUS_OBC_TEMP)]</label>
+      </control>
+    </control>
     <!--Clock-->
     <control type="group">
       <posx>210r</posx>
